apps/base/n8n/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    pod-security.kubernetes.io/enforce: privileged
