apps/base/n8n/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: n8n
  name: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:2.42.3
        ports:
        - containerPort: 5678
          name: http
        volumeMounts:
        - name: n8n-data
          mountPath: /home/node/.n8n
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-data
