apps/base/n8n/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: n8n
  name: n8n
spec:
  selector:
    app: n8n
  ports:
  - protocol: TCP
    port: 5678
    targetPort: 5678
  type: ClusterIP
