apps/base/n8n/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-http-route
  namespace: n8n
spec:
  parentRefs:
  - name: http-gateway
    namespace: gateway
  hostnames:
  - "ia.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: n8n
      port: 5678
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-tls-route
  namespace: n8n
spec:
  parentRefs:
  - name: tls-gateway
    namespace: gateway
  hostnames:
  - "ia.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: n8n
      port: 5678
